# LavenderSentinel

./: LICENSE  README.md  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  settings.yaml
backend/: Dockerfile  Dockerfile.dev  README.md  app.py  pyproject.toml  run_fetch.py  settings.yaml
backend/app/: __init__.py  config.py  main.py
backend/app/core/: __init__.py  exceptions.py  security.py
backend/app/db/: __init__.py  database.py  models.py  repositories.py
backend/app/indexing/: __init__.py  handlers.py  pipeline.py
backend/app/models/: __init__.py  chat.py  paper.py  search.py  user.py
backend/app/routers/: __init__.py  chat.py  health.py  papers.py  search.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  chat_service.py  collector.py  paper_service.py  summarizer.py
backend/pages/: 1_Page_Detail.py
backend/src/config/: config.py
backend/src/crawler/: __init__.py  arxiv_client.py
backend/src/database/: paper_repository.py
backend/src/jobs/: daily_arxiv.py
backend/src/model/: paper.py
backend/src/scheduler/: scheduler_service.py
backend/src/service/: llm_service.py  pdf_parser_service.py
docs/: DOCKER_DEBUG.md
frontend/: Dockerfile  README.md  api_client.py  app.py  index.html  package.json  requirements.txt  tailwind.config.js
frontend/.streamlit/: config.toml
frontend/components/: __init__.py  chat_message.py  paper_card.py  search_bar.py
frontend/pages/: 1_🏠_Home.py  2_🔍_Search.py  3_📚_Papers.py  4_💬_Chat.py
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: index.ts  usePapers.ts
frontend/src/pages/: ChatPage.tsx  HomePage.tsx  PapersPage.tsx  SearchPage.tsx  index.ts
frontend/src/services/: api.ts  chatService.ts  index.ts  paperService.ts  searchService.ts
frontend/src/stores/: index.ts  (+3 more)
frontend_streamlit/: Dockerfile  README.md  api_client.py  app.py  pages_config.py  requirements.txt
frontend_streamlit/.streamlit/: config.toml
frontend_streamlit/views/: __init__.py  chat.py  home.py  papers.py  search.py
(+18 files in other folders)
