# Python 项目配置文件
# 使用 uv 或 pip 管理依赖
# 运行: uv pip install -e ".[dev]"

[project]
name = "lavender-sentinel-backend"
version = "0.1.0"
description = "LavenderSentinel 后端服务"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "litellm>=1.40.0",  # Unified LLM interface (OpenAI, Ollama, Anthropic, etc.)
    "sqlalchemy>=2.0.45",
    "qdrant-client>=1.16.2",
    "redis>=7.1.0",
    "arxiv>=2.4.0",
]

[project.optional-dependencies]
dev = [
    # TODO: 添加开发依赖
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
